# claude-mux

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  auth.py  client.py  config.py  docker-compose.yml  errors.py  logger.py  main.py  outline.md  pyproject.toml  request_id_logging.py  requirements.txt  router.py
.claude/skills/pypi-release/: SKILL.md
.github/workflows/: release.yml
.kiro/specs/claude-proxy-router/: design.md  requirements.md  tasks.md
docs/: api-contract.md  debug-notes.md  github-actions-pypi-release.md  logging-system.md  production-guide.md  python-build-hatchling-guide.md  request-id-guide.md  runbook.md  uv-tool-installation-guide.md
docs/adr/: 001-fnmatch-for-routing.md  002-env-over-yaml.md  003-sse-streaming.md  004-error-response-format.md
docs/superpowers/plans/: 2026-03-20-one-click-distribution.md
middleware/: __init__.py  request_id.py
scripts/: install.bat  install.sh  quick-start.sh
