[project]
name = "claude-mux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.28.1",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "structlog==24.4.0",
    "pydantic==2.10.0",
    "python-dotenv>=1.0.1",
]
